external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_constant_fold.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_constant_fold.move:6:22
  │
6 │     const ADD: i64 = 10i64 + 20i64;
  │                      ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_constant_fold.move:7:22
  │
7 │     const SUB: i64 = 50i64 - 30i64;
  │                      ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_constant_fold.move:8:22
  │
8 │     const MUL: i32 = 6i32 * 7i32;
  │                      ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_constant_fold.move:9:22
  │
9 │     const DIV: i16 = 100i16 / 10i16;
  │                      ^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:10:21
   │
10 │     const MOD: i8 = 10i8 % 3i8;
   │                     ^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:13:22
   │
13 │     const NEG: i64 = -(42i64);
   │                      ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:14:29
   │
14 │     const DOUBLE_NEG: i64 = -(-(42i64));
   │                             ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:15:27
   │
15 │     const NEG_ZERO: i64 = -(0i64);
   │                           ^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:18:25
   │
18 │     const NESTED: i64 = (10i64 + 20i64) * 3i64;
   │                         ^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:19:26
   │
19 │     const NESTED2: i32 = -(5i32 + 10i32);
   │                          ^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:28:23
   │
28 │     const BAND: i64 = 0x0Fi64 & 0x03i64;
   │                       ^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:29:22
   │
29 │     const BOR: i64 = 0x0Fi64 | 0x30i64;
   │                      ^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:30:23
   │
30 │     const BXOR: i64 = 0x0Fi64 ^ 0x03i64;
   │                       ^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:33:22
   │
33 │     const SHL: i64 = 1i64 << 8u8;
   │                      ^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:34:22
   │
34 │     const SHR: i64 = 256i64 >> 4u8;
   │                      ^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:37:27
   │
37 │     const CAST_UP: i64 = (1i8 as i64);
   │                           ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/signed_ints/signed_int_constant_fold.move:38:28
   │
38 │     const CAST_DOWN: i8 = (42i64 as i8);
   │                            ^^^^^ Signed integer types are under development
